--- a/CloudTest/Base.lproj/Main.storyboard
+++ b/CloudTest/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ListViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,56 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ic1-nH-7ix">
+                                <rect key="frame" x="0.0" y="20" width="584" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListViewCell" id="yc6-EL-RML" customClass="ListViewCell">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yc6-EL-RML" id="6rj-w1-LpR">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVZ-N2-1R3">
+                                                    <rect key="frame" x="8" y="8" width="568" height="27"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="WVZ-N2-1R3" firstAttribute="leading" secondItem="6rj-w1-LpR" secondAttribute="leadingMargin" id="ONp-Jj-xo8"/>
+                                                <constraint firstItem="WVZ-N2-1R3" firstAttribute="top" secondItem="6rj-w1-LpR" secondAttribute="topMargin" id="b7z-JT-nkw"/>
+                                                <constraint firstItem="WVZ-N2-1R3" firstAttribute="trailing" secondItem="6rj-w1-LpR" secondAttribute="trailingMargin" id="fb2-2x-COh"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="WVZ-N2-1R3" secondAttribute="bottom" id="t2F-8w-UDb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="itemName" destination="WVZ-N2-1R3" id="sUk-o9-BCG"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="0wM-nY-9j3"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="vkf-bg-cvZ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ic1-nH-7ix" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="1LB-bC-RPk"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ic1-nH-7ix" secondAttribute="bottom" id="6rU-36-ndp"/>
+                            <constraint firstItem="Ic1-nH-7ix" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dfz-Av-rvT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ic1-nH-7ix" secondAttribute="trailing" id="nRN-7k-rtL"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="listTableView" destination="Ic1-nH-7ix" id="Gzl-BU-ceZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="267" y="301"/>
         </scene>
     </scenes>
 </document>
