--- a/CloudTest/Base.lproj/Main.storyboard
+++ b/CloudTest/Base.lproj/Main.storyboard
@@ -1,10 +1,79 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LNm-hj-ao0">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Login View Controller-->
+        <scene sceneID="YXB-39-cGh">
+            <objects>
+                <viewController id="LNm-hj-ao0" customClass="LoginViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ieZ-o7-o0h"/>
+                        <viewControllerLayoutGuide type="bottom" id="2x7-hb-tb8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UlW-aI-kgW">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jK4-af-OQ4">
+                                <rect key="frame" x="16" y="285" width="568" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hjt-ew-cwK">
+                                <rect key="frame" x="16" y="247" width="568" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N7T-dg-Jgi">
+                                <rect key="frame" x="276" y="323" width="48" height="30"/>
+                                <state key="normal" title="Sign In">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="tappedSignInButton:" destination="LNm-hj-ao0" eventType="touchUpInside" id="6FB-Fc-4Ag"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jK4-af-OQ4" firstAttribute="trailing" secondItem="UlW-aI-kgW" secondAttribute="trailingMargin" id="47C-f4-Rpw"/>
+                            <constraint firstItem="N7T-dg-Jgi" firstAttribute="top" secondItem="jK4-af-OQ4" secondAttribute="bottom" constant="8" id="Djd-XQ-QBB"/>
+                            <constraint firstAttribute="centerX" secondItem="jK4-af-OQ4" secondAttribute="centerX" id="Fo9-Dk-bDI"/>
+                            <constraint firstItem="jK4-af-OQ4" firstAttribute="trailing" secondItem="hjt-ew-cwK" secondAttribute="trailing" id="Q15-ZY-cB4"/>
+                            <constraint firstAttribute="centerY" secondItem="jK4-af-OQ4" secondAttribute="centerY" id="YtG-OB-BSK"/>
+                            <constraint firstItem="jK4-af-OQ4" firstAttribute="leading" secondItem="UlW-aI-kgW" secondAttribute="leadingMargin" id="arz-IO-b9Q"/>
+                            <constraint firstItem="jK4-af-OQ4" firstAttribute="top" secondItem="hjt-ew-cwK" secondAttribute="bottom" constant="8" id="pfn-iA-vz0"/>
+                            <constraint firstItem="jK4-af-OQ4" firstAttribute="leading" secondItem="hjt-ew-cwK" secondAttribute="leading" id="s20-xN-YQ6"/>
+                            <constraint firstAttribute="centerX" secondItem="N7T-dg-Jgi" secondAttribute="centerX" id="wlM-W8-VaZ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="5xL-S3-yP2" kind="show" identifier="SigninToListSegue" id="MPG-DN-7Jk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="993-xk-4Dt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1930" y="291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Yih-KF-nbg">
+            <objects>
+                <navigationController id="5xL-S3-yP2" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="B0m-2x-dmd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gZ5-xk-uot"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kCY-o7-m57" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1184" y="286"/>
+        </scene>
         <!--List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -18,7 +87,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ic1-nH-7ix">
-                                <rect key="frame" x="0.0" y="20" width="584" height="580"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListViewCell" id="yc6-EL-RML" customClass="ListViewCell">
@@ -26,7 +95,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yc6-EL-RML" id="6rj-w1-LpR">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVZ-N2-1R3">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVZ-N2-1R3">
                                                     <rect key="frame" x="8" y="8" width="568" height="27"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -42,6 +111,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="itemName" destination="WVZ-N2-1R3" id="sUk-o9-BCG"/>
+                                            <segue destination="qyS-xR-NNe" kind="show" id="JiP-Or-gfO"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -53,19 +123,63 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Ic1-nH-7ix" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="1LB-bC-RPk"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ic1-nH-7ix" secondAttribute="bottom" id="6rU-36-ndp"/>
+                            <constraint firstItem="Ic1-nH-7ix" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="UgM-Iw-6l9"/>
                             <constraint firstItem="Ic1-nH-7ix" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dfz-Av-rvT"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ic1-nH-7ix" secondAttribute="trailing" id="nRN-7k-rtL"/>
+                            <constraint firstAttribute="trailing" secondItem="Ic1-nH-7ix" secondAttribute="trailing" id="nRN-7k-rtL"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="YkE-ya-LPt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="eRY-KG-NHC">
+                            <connections>
+                                <action selector="tappedUploadButton:" destination="BYZ-38-t0r" id="KDq-Ke-0tW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="listTableView" destination="Ic1-nH-7ix" id="Gzl-BU-ceZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="267" y="301"/>
+            <point key="canvasLocation" x="-257" y="286"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="u7n-PL-iXb">
+            <objects>
+                <viewController id="qyS-xR-NNe" customClass="DetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZmU-nq-5MA"/>
+                        <viewControllerLayoutGuide type="bottom" id="EnU-Tp-cwK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2bM-dU-Doa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tab_group" translatesAutoresizingMaskIntoConstraints="NO" id="Ge6-pJ-Cyy">
+                                <rect key="frame" x="200" y="200" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="RdX-sc-73t"/>
+                                    <constraint firstAttribute="width" constant="200" id="iq8-KO-pYH"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="Ge6-pJ-Cyy" secondAttribute="centerX" id="Ag5-D2-H3d"/>
+                            <constraint firstAttribute="centerY" secondItem="Ge6-pJ-Cyy" secondAttribute="centerY" id="zto-LR-x0E"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="selectedImageView" destination="Ge6-pJ-Cyy" id="wIf-iY-ERb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z6p-d7-V15" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="574" y="286"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tab_group" width="30" height="30"/>
+    </resources>
 </document>
